<resources>
    <string name="app_name">StoryTapStory</string>

    <!-- StoryPlayerActivity -->
    <string name="content_star">Rotating yellow star</string>
    <string name="content_starry_sky">Starry sky</string>

    <!-- StoryListActivity -->
    <string name="rename_dialog_title">Rename \"%s\"?</string>
    <string name="create_dialog_title">New Story</string>

    <!-- ClipsActivity -->
    <string name="title_activity_clips">Record clip</string>
    <string name="record_clip">Hold to record</string>
    <string name="save_dialog_title">Save recording?</string>
    <string name="delete_dialog_title">Delete \"%s\"?</string>

    <!-- Generic -->
    <string name="hint_name">Name</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <string name="label_play">Play</string>
    <string name="label_stop">Stop</string>
    <string name="label_delete">Delete</string>
    <string name="label_save">Save</string>
    <string name="label_discard">Discard</string>
    <string name="label_edit">Edit</string>
    <string name="label_rename">Rename</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_create">Create</string>
    <string name="label_new_story">New story</string>
    <string name="label_drag_handle">Drag handle</string>
</resources>
