<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/save_dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_name"
        android:importantForAutofill="no"
        android:inputType="textCapSentences" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageButton
            android:id="@+id/save_dialog_play_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_play"
            android:src="@drawable/ic_play"
            style="@style/ListIconButton" />
        <ImageButton
            android:id="@+id/save_dialog_stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/label_stop"
            android:src="@drawable/ic_stop"
            style="@style/ListIconButton" />
    </LinearLayout>
</LinearLayout>
