<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_item"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/story_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/list_margin_start"
        android:textSize="@dimen/list_main_text_size"
        tools:text="Story Title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal"
        style="?attr/buttonBarStyle">

        <Button
            android:id="@+id/story_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_edit"
            style="?attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/story_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_rename"
            style="?attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/story_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_delete"
            style="?attr/buttonBarButtonStyle"/>
    </LinearLayout>
</RelativeLayout>
